public/style.css
header {
	background-color: rgb(51, 199, 204);
}

body {
	background-color: #EEEEEE;
	font-family: Lato;
	padding: 0;
	margin: 0;
 }

 .site-title {
	color: #FFFFFF;
	display: block;
	float: none;
	width: 100%;
    text-align: center;
	font-size: 225%;
	font-weight: bold;
	padding: .5em 0;
	margin: 0;
	text-align: center;
}

a {
	text-decoration: none;
	color: #006600;
}

a:hover {
	color: rgb(51, 199, 204);
}

caption {
	font-size: 150%;
	font-weight: bold;
	padding: .25em;
}

.location-search-input {
	text-align:center;
	display: block;
	margin: 0 auto;
}

.location-table-container {
  width: 100%;
  margin: 0 auto;
}


.location-table {
	min-height: 50vh;
	max-width:75em;
	height: 40em;
	table-layout:fixed;
	margin:auto;
}
.location-name {
	font-weight: bold;
}
th, td {
	padding:.5em 0;
	border:1px solid #000;
	text-align:center;
}
thead {
	background:rgb(51, 199, 204);
	color: #ffffff;
	display:table;
	overflow-x:hidden;
	width:100%;
	table-layout:fixed;
	text-align:center;
}
tbody {
	height:100%;
	overflow:auto;
	overflow-x:hidden;
	display:block;
	width:100%;
	background:#fff;
}

tbody tr {
	display:table;
	width:100%;
	table-layout:fixed;
	text-align:"center";
}

tbody tr:hover {
  background-color: lightblue;
  cursor: pointer;
}

th:hover {
  background-color: lightblue;
  cursor: pointer;
}

tr td:nth-child(1) {
  width: 10em;
}

tr td:nth-child(2) {
  width: 8em;
}

tr td:nth-child(3) {
  width: 8em;
}

tr td:nth-child(4) {
  width: 8em;
}

tr td:nth-child(5) {
  width: 5em;
}

tr td:nth-child(6) {
  width: 5em;
}

tr th:nth-child(1) {
  width: 10em;
}

tr th:nth-child(2) {
  width: 8em;
}

tr th:nth-child(3) {
  width: 16em;
}

tr th:nth-child(4) {
  width: 5em;
}

tr th:nth-child(5) {
  width: 5em;
}
.error-container {
  margin-top: 50px;
  text-align: center;
}

.error-container h2 {
  margin: 10px 0;
  font-size: 96px;
  font-weight: 100;
}

.error-container h3 {
  margin: 10px 0;
  font-size: 36px;
  font-weight: 400;
}

.location-title {
	display: table;
	font-weight: bold;
	font-size: 250%;
	margin: .5em auto;
}

iframe {
	display: table;
	margin: .5em auto;
}

.comment-container {
	margin: 1.5em auto;
	padding: 0;
	width: 50em;
	max-height: 46em;
	display: flex;
	flex-wrap: wrap;
}

.comment {
	background-color: #FFFFFF;
	width: 40 em;
	border-radius: .25em;
	border: 1px solid LightGrey;
	display: flex;
	margin: .125em;
	padding: 0 1em .5em;
	flex-basis: 49em;
}

.comment-author {
	font-weight:bolder;
}

h2 {
	border-bottom:2px solid #3F3F3F;
	border-radius: .25em;
}

.description-author {
	font-size: 130%;
	font-weight: bold;
}

.description-latitute,
.description-longitute,
.description-text {
	font-size: 110%;
	margin: .25em .5em ;
}


button .fa-comment, button .fa-map-pin {
	color: #FFFFFF;
	transform: scale(2);
}

#create-button {
	border-radius: 50%;
	background-color: Red;
	box-shadow: 4px 4px 2px #BDBDBD;
	position: fixed;
	right: 32px;
	bottom: 32px;
	height: 64px;
	width: 64px;
	border: 0;
}

#create-button:hover {
	transform: scale(1.2);
	background-color: rgb(51, 199, 204);
}

#create-button:focus{
	outline: none;
}





#modal-backdrop {
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 1000;
  background-color: rgba(0, 0, 0, 0.85);
}

#leave-comment-modal,
#create-location-modal {
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 1010;
  overflow: auto;
}


.hidden {
  display: none;
}

.modal-pop-up {
  width: auto;
  max-width: 40em;
  min-width: 23em;
  min-height: 20em;
  margin: 2em auto;
  background-color: #fff;
  border-radius: 1em;
}

.modal-header {
  position: relative;
  padding: .5em 1em;
}

.modal-header h3 {
  margin: 0;
  font-size: 175%;
}

.modal-close-button {
  position: absolute;
  right: .5em;
  top: .25em;
  font-size: 1.5em;
  border: none;
  background: none;
  padding: 0;
  cursor: pointer;
}

.modal-body {
  padding: 1em;
}

.comment-input-element,
.location-input-element {
  display: flex;
  align-items: center;
  font-size: 120%;
  margin: .5em 0;
}

.comment-input-element label,
.location-input-element label {
  font-weight: bolder;
  flex: 1 4.5em;
  margin-right: 1em;
}

.comment-input-element input,
.comment-input-element textarea,
.location-input-element input,
.location-input-element textarea {
  flex: 6 12em;
  padding: .5em;
  font-size: 1em;
  border: 1px solid #aaa;
}

.comment-input-element textarea,
.location-input-element textarea {
  min-height: 4em;
}

.modal-footer {
  display: flex;
  justify-content: flex-end;
  padding: 10px 10px 20px 10px;
}

.modal-footer button {
  font-size: 120%;
  background-color: #FFFFFF;
  color: #333;
  border: 1px solid #333;
  border-radius: .25em;
  padding: .5em;
  margin-right: 1em;
  cursor: pointer;
}

.modal-cancel-button:hover {
  background-color: #EEEEEE;
}

.modal-footer .modal-accept-button {
  background-color: rgb(51, 199, 204);
  color: #FFFFFF;
}

.modal-accept-button:hover {
  background-color: lightblue;
}

